--- a/app/public/test.html
+++ b/app/public/test.html
@@ -1,7 +1,17 @@
-<div class="card">
-    <img class="card-img-top" src="http://lorempixel.com/400/400/" alt="image">
-    <div class="card-body">
-        <h5 class="card-title">Title</h5>
-        <p class="card-text">Content</p>
-    </div>
-</div>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>#</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>#</th>
+    </tr>
+  </tfoot>
+</table>
