--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Font awesome -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
     <!-- Paper Dashboard -->
-    <!-- <link rel="apple-touch-icon" sizes="76x76" href="paper-dashboard/assets/img/apple-icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="paper-dashboard/assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="paper-dashboard/assets/img/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" />
     <link rel="stylesheet" href="paper-dashboard/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="paper-dashboard/assets/css/paper-dashboard.css?v=2.0.0" /> -->
+    <link rel="stylesheet" href="paper-dashboard/assets/css/paper-dashboard.css?v=2.0.0" />
 
     <title>React App</title>
   </head>
@@ -28,25 +28,25 @@
 
     <!-- Paper Dashboard -->
     <!--   Core JS Files   -->
-    <!-- <script src="paper-dashboard/assets/js/core/jquery.min.js"></script>
+    <script src="paper-dashboard/assets/js/core/jquery.min.js"></script>
     <script src="paper-dashboard/assets/js/core/popper.min.js"></script>
     <script src="paper-dashboard/assets/js/core/bootstrap.min.js"></script>
     <script src="paper-dashboard/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script> -->
     <!--  Google Maps Plugin    -->
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Chart JS -->
-    <!-- <script src="paper-dashboard/assets/js/plugins/chartjs.min.js"></script> -->
+    <script src="paper-dashboard/assets/js/plugins/chartjs.min.js"></script>
     <!--  Notifications Plugin    -->
-    <!-- <script src="paper-dashboard/assets/js/plugins/bootstrap-notify.js"></script> -->
+    <script src="paper-dashboard/assets/js/plugins/bootstrap-notify.js"></script>
     <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-    <!-- <script src="paper-dashboard/assets/js/paper-dashboard.min.js?v=2.0.0" type="text/javascript"></script> -->
+    <script src="paper-dashboard/assets/js/paper-dashboard.min.js?v=2.0.0" type="text/javascript"></script>
     <!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-    <!-- <script src="paper-dashboard/assets/demo/demo.js"></script> -->
-    <!-- <script>
+    <script src="paper-dashboard/assets/demo/demo.js"></script>
+    <script>
       $(document).ready(function() {
         // Javascript method's body can be found in assets/assets-for-demo/js/demo.js
         demo.initChartsPages();
       });
-    </script> -->
+    </script>
   </body>
 </html>
